# pearlcd

./: .gitignore  CMakeLists.txt  Makefile  README.md
.agents/: ENTRYPOINT.md  cicd.md  doc.md  docs.md  project-structure.md  project.md  syntax.md
.github/workflows/: ci.yml  release.yml
build-release-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  pearl_tests  pearlcd
concept/: AST.md  BUILD.md  CODEGEN.md  ERRORS.md  IR.md  LEX.md  PARSE.md  PLATFORM.md  RUNTIME.md  STRUCT.md  SYMBOLS.md  SYNTAX.md
dist-test/: pearlcd-linux.tar.gz.sha256
docs/: .gitignore
docs/en/: architecture.md  ast.md  build-release.md  cli.md  codegen.md  index.md  ir.md  lexer-parser.md  semantic.md  syntax.md
docs/tr/: architecture.md  ast.md  build-release.md  cli.md  codegen.md  index.md  ir.md  lexer-parser.md  semantic.md  syntax.md
examples/: control_flow.prl  functions.prl  hello.prl  print_formats.prl  strings_calls.prl  test.prl
include/: ast.h  codegen_c.h  ir.h  lexer.h  parser.h  semantic.h  symbol.h
scripts/: build.sh  check-dep.sh  docs.sh  package_release.sh
src/: main.c
src/backend/: codegen_c.c  ir.c
src/frontend/: ast.c  ast.h  lexer.l  parser.y  semantic.c
tests/: run_tests.sh
tests/unit/: test_api.c
toolchain/: linux.cmake  macos.cmake  windows-mingw.cmake  windows-msvc.cmake
